welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:16: error: value foreach is not a member of Int
for (i <-7) {
         ^